[gd_scene load_steps=12 format=2]

[ext_resource path="res://grafica/coin.png" type="Texture" id=1]
[ext_resource path="res://script/Coin.gd" type="Script" id=2]
[ext_resource path="res://musicas/coin/coin_2-89099.mp3" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 40, 40 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="Coin" type="Area2D"]
z_index = -1
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
mix_target = 2
bus = "Coin"

[node name="CoinCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CoinSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 8 )
frame = 5
playing = true

[connection signal="area_entered" from="." to="." method="_on_Coin_area_entered"]
[connection signal="bateu" from="." to="." method="_on_Coin_bateu"]
